--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+.idea
+.env
+node_modules/
+screenshots/
+uploads/
+.env
+*.log
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
