--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "form-data": "^4.0.3",
     "playwright": "^1.44.1"
   }
 }
