--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "form-data": "^4.0.3",
-    "playwright": "^1.44.1"
+    "playwright": "^1.44.1",
+    "winston": "^3.17.0"
   }
 }
