--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,70 @@
-# Ollama Configuration
+# =======================
+# User Information
+# =======================
+
+# Your personal information that will be used to fill out job applications
+USER_FIRST_NAME=Jan
+USER_LAST_NAME=Kowalski
+USER_EMAIL=jan.kowalski@example.com
+USER_PHONE=+48123456789
+
+# =======================
+# Document Paths
+# =======================
+# Paths to your CV and cover letter
+CV_PATH=./documents/cv.pdf
+COVER_LETTER_PATH=./documents/cover_letter.pdf
+
+# =======================
+# Browser Configuration
+# =======================
+# Set to false to see the browser window (useful for debugging)
+HEADLESS=false
+# Time in milliseconds to wait for elements to appear
+TIMEOUT=30000
+# Add delay between actions (milliseconds)
+SLOW_MO=100
+# User agent to use
+USER_AGENT=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36
+
+# =======================
+# Ollama Configuration (for AI features)
+# =======================
 OLLAMA_BASE_URL=http://localhost:11434
 OLLAMA_MODEL=mistral  # or mistral, codellama, etc.
 
-# Form Defaults
-DEFAULT_FORM_SPEC=./specs/form_acme.md
-DEFAULT_OUTPUT_DIR=./output
+# =======================
+# Application Behavior
+# =======================
+# Maximum number of retries for failed tasks
+MAX_RETRIES=2
+# Delay between job applications (milliseconds)
+DELAY_BETWEEN_JOBS=5000
 
-# Browser Configuration
-HEADLESS=true
-SLOW_MO=100  # milliseconds
-TIMEOUT=30000  # milliseconds
+# =======================
+# Logging
+# =======================
+LOG_LEVEL=info  # error, warn, info, debug
+LOG_FILE=./logs/application.log
 
-# Optional: Email Configuration (for future use)
-# SMTP_HOST=smtp.example.com
-# SMTP_PORT=587
-# SMTP_USER=user@example.com
-# SMTP_PASSWORD=your-password
-# EMAIL_FROM=formagent@example.com
+# =======================
+# Email Notifications (optional)
+# =======================
+# Set to true to enable email notifications
+EMAIL_NOTIFICATIONS=false
+# SMTP configuration for email notifications
+SMTP_HOST=smtp.example.com
+SMTP_PORT=587
+SMTP_SECURE=false  # true for 465, false for other ports
+SMTP_USER=user@example.com
+SMTP_PASSWORD=your-password
+EMAIL_FROM=formagent@example.com
+EMAIL_TO=your-email@example.com
+
+# =======================
+# Advanced Settings
+# =======================
+# Path to store screenshots and other output files
+OUTPUT_DIR=./output
+# Maximum number of parallel browser instances
+MAX_CONCURRENT_JOBS=1
