--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "name": "form-agent",
   "version": "1.0.0",
+  "description": "Automated form filling and job application tool",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "pipeline": "node run-pipeline.js",
+    "apply": "node run-job-applications.js",
+    "check-setup": "node scripts/check-setup.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "axios": "^1.9.0",
@@ -11,7 +17,19 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "form-data": "^4.0.3",
+    "js-yaml": "^4.1.0",
     "playwright": "^1.44.1",
     "winston": "^3.17.0"
-  }
+  },
+  "engines": {
+    "node": ">=14.0.0"
+  },
+  "keywords": [
+    "automation",
+    "forms",
+    "job-application",
+    "playwright"
+  ],
+  "author": "",
+  "license": "MIT"
 }
