--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "pipeline": "node run-pipeline.js",
     "apply": "node run-job-applications.js",
     "check-setup": "node scripts/check-setup.js",
+    "migrate:browser": "node scripts/migrate-to-new-browser.js",
+    "example": "node examples/new-browser-demo.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "express-fileupload": "^1.4.0",
     "form-data": "^4.0.3",
     "js-yaml": "^4.1.0",
+    "multer": "^2.0.1",
     "playwright": "^1.44.1",
     "winston": "^3.17.0"
   },
