--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "Automated form filling and job application tool",
   "main": "server.js",
   "type": "module",
+  "type": "module",
+  "bin": {
+    "formagent": "./src/cli.js"
+  },
   "scripts": {
     "start": "node server.js",
     "pipeline": "node run-pipeline.js",
@@ -11,14 +15,20 @@
     "check-setup": "node scripts/check-setup.js",
     "migrate:browser": "node scripts/migrate-to-new-browser.js",
     "example": "node examples/new-browser-demo.js",
+    "run-jobs": "node src/cli.js process",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@inquirer/prompts": "^4.2.5",
     "axios": "^1.9.0",
+    "chalk": "^5.3.0",
+    "commander": "^12.0.0",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "express-fileupload": "^1.4.0",
     "form-data": "^4.0.3",
+    "globby": "^14.0.0",
+    "inquirer": "^9.2.15",
     "js-yaml": "^4.1.0",
     "multer": "^2.0.1",
     "playwright": "^1.44.1",
