--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Automated form filling and job application tool",
   "main": "server.js",
   "type": "module",
-  "type": "module",
   "bin": {
     "formagent": "./src/cli.js"
   },
@@ -31,6 +30,7 @@
     "inquirer": "^9.2.15",
     "js-yaml": "^4.1.0",
     "multer": "^2.0.1",
+    "node-fetch": "^2.7.0",
     "playwright": "^1.44.1",
     "winston": "^3.17.0"
   },
